# magdle

./: README.md
3rd/: .gitignore  build-all  build-jpeg  build-opencv
3rd/make/: all.py  build-jsoncpp  build-sqlite  clean-all.py  clean-test  env.py  jsoncpp.py  opencv.py  sqlite.py
3rd/sqlite/: .gitignore
cxx/: CMakeLists.txt  app.cpp  app.h  boost.h  config.cpp  config.h  dataset.cpp  dataset.h  dataset_images.cpp  dataset_images.h  imageinfo.cpp  imageinfo.h  json.cpp  json.h  kernel.cpp  kernel.h  library.h  linear.cpp  linear.h  logger.cpp  logger.h  magdle.cpp  magdle.h  object.cpp  object.h  ocv.cpp  ocv.h  similar.cpp  similar.h  similar_ocv.cpp  similar_ocv.h  sqlite.cpp  sqlite.h  sqlite_json1.c  storage.cpp  storage.h  stringt.cpp  stringt.h  threadt.cpp  threadt.h  (+6 more)
cxx/3rd/: build-all  build-clear  build-jsoncpp  build-opencv  clean-all  clean-test
cxx/3rd/jsoncpp/: CMakeLists.txt
cxx/3rd/opencv/: CMakeLists.txt
cxx/3rd/sqlite/: .gitignore  Makefile  config.status  libtool  sqlite3.pc
cxx/cards/: cards.cpp
cxx/rmdup/: CMakeLists.txt  rmdup.cpp
cxx/storage/: storage.cpp
py/heads/: main.py
py/rmcard/: main.py
py/rmdup/: main.py
py/rmdup/result/: db
